apps/web-giddh/src/assets/css/style-2.scss
/* ... */
#setting-tab > .tab-container > .tab-content {
    padding-top: 55px;
}

/*datepicker common css*/
.giddh-datepicker-modal .modal-content {
    background: none !important;
}

.giddh-datepicker-modal .modal-body {
    padding: 0 !important;
}

ngx-daterangepicker-material {
    // display: none;
    position: absolute;
    z-index: 1000;
    overflow: hidden;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 8px 0 rgba(0, 0, 0, 0.12);
    z-index: 1;
    width: 100% !important;
    max-width: 544px !important;
}

.edit-modal {
    max-width: 300px;
    margin: 0 auto;
    .edit-date-modal {
        h5 {
            color: $gray;
            font-size: 13px;
        }
        .modal-date-range {
            display: flex;
            align-items: center;
            justify-content: space-between;
            padding-top: 30px;
            padding-bottom: 20px;
            border-bottom: 1px solid $gainsboro;
            margin-bottom: 15px;
            span {
                padding: 5px 10px;
                i {
                    color: $gray;
                }
            }
            .modal-inside-heading {
                display: none;
            }
        }
        .start-end-date {
            .start-end-date-d-flex {
                display: flex;
                padding-top: 10px;
                label {
                    position: absolute;
                    background-color: $white;
                    padding: 0 5px;
                    top: -6px;
                    left: 9px;
                    font-size: 12px;
                    color: $gray;
                }
                input {
                    width: 130px;
                    height: 51px;
                    border: 1px solid $gainsboro;
                    border-radius: 3px;
                    padding: 0 15px;
                    font-size: 14px;
                }
            }
        }
        .button-wrapper {
            text-align: right;
            font-size: 14px;
            margin-top: 10px;
            a {
                color: $deep-sky-blue;
                padding: 10px 10px;
                display: inline-block;
            }
        }
    }
}

/*notofication css*/

.HW_badge.HW_visible {
    position: absolute;
    top: 0px;
    left: 14px;
}

.HW_badge {
    transition: none !important;
    transform: scale(1) !important;
    position: absolute !important;
}

.HW_badge_cont {
    visibility: visible !important;
    width: auto !important;
    top: 0;
    width: 30px !important;
    display: flex !important;
    left: 0 !important;
    position: absolute !important;
}

.HW_badge {
    background: $red;
    width: 14px !important;
    height: 14px !important;
    line-height: 14px !important;
}
.HW_badge.HW_softHidden {
    display: none !important;
}
span#HW_badge_cont:nth-child(3) {
    display: none;
}
/*notofication css end*/

.setting-data,
.setting-sidebar-open .white-row {
    padding-left: 15px !important;
}

// .setting-sidebar-open .white-row{
//     margin-left: 0;
// }
.setting-sidebar-open .menu_open .setting-data,
.setting-sidebar-open .menu_open .white-row {
    padding-left: 15px !important;
}

.date-field {
    flex-direction: column;
}

.mobile-home {
    background-color: $lavender;
    .fixed-padding,
    .padding-top-fixed,
    .desktop-header {
        display: none;
    }
    #content-wrapper {
        background-color: $lavender;
    }
}

.icon-home-icon {
    color: $white;
}
.remove-header-lower-layer {
    .container-fluid.mr-b1 {
        margin-bottom: 0;
        .lower-layer-header {
            display: none !important;
        }
        .upper-layer-header {
            padding-top: 10px;
            padding-bottom: 5px;
        }
    }
    .fixed-padding {
        padding-top: 50px;
    }
}
.mobile-sidebar-open:after {
    position: absolute;
    content: "";
    background-color: rgba(0, 0, 0, 0.5);
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    z-index: 9;
}
.HW_badge.HW_softHidden {
    display: none !important;
}
span#HW_badge_cont:nth-child(3) {
    display: none !important;
}
.giddh-datepicker {
    cursor: pointer !important;
}
.setting-items {
    ul {
        li {
            a {
                span {
                    i {
                        color: $gray;
                        margin-right: 10px;
                        font-size: 17px;
                    }
                }
            }
        }
    }
}

.debtor-details-form {
    .form-fields {
        .single-field {
            sh-select {
                .header {
                    input.form-control {
                        background-color: $white !important;
                        height: 28px !important;
                        padding-right: 15px !important;
                    }
                }
            }
        }
    }
}

.on-setting-page .nav-left-bar.open,
.on-user-page .nav-left-bar.open on-user-page {
    left: 0 !important;
    display: block !important;
}
.setting-sidebar-open .nav-left-bar,
.on-user-page .nav-left-bar,
.on-setting-page .nav-left-bar {
    display: block;
}
.menu_open aside-setting.setting-sidebar {
    right: 0 !important;
}
.on-setting-page aside-setting.setting-sidebar,
.on-user-page aside-setting.setting-sidebar {
   // left: -250px;
}
.setting-sidebar-open #content-wrapper.menu_open {
    padding-right: 240px;
    padding-left: 60px !important;
}

.setting-sidebar-open .desktop-header {
    padding-left: 0;
}
.setting-sidebar-open .desktop-header.menu_open {
    padding-right: 240px !important;
}
.desktop-header.menu_open {
    padding-left: 60px !important;
}
/*flex css start*/
.flex-column {
    flex-direction: column;
}
/*flex css start*/
.select-border-bottom {
    .form-control {
        border: none;
        border-bottom: 1px solid $gainsboro;
        width: 100%;
    }
}
.preview-lightbox-overlay {
    z-index: 999 !important;
}
/* ... */

